--- a/FORM/page3.html
+++ b/FORM/page3.html
@@ -41,6 +41,6 @@
             </table>
             <br>
             <hr>
-            <a href="page1.html" class="visited3" target=_top ><h2>Main page</h2></a>
+            <a href="index.html" class="visited3" target=_top ><h2>Main page</h2></a>
             </body>
 </html>
