--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
             Kauffman and Crane began developing Friends under the title Insomnia Cafe between November and December 1993. They presented the idea to Bright, and together they pitched a seven-page treatment of the show to NBC. After several script rewrites and changes, including title changes to Six of One[2] and Friends Like Us, the series was finally named Friends</h5>
        <hr>
        <div class="center-div">
-        <a href="FORM\page2.html" class="visited3"  target="_top" ><h2 >page2</h2></a>
-        <a href="FoRM\page3.html" class="visited3"  target="_top"   ><h2>page3</h2></a>
-        <a href="FORM\order.html" class="visited3"  target="_top"   ><h2>order</h2></a>
+        <a href="elia1993.github.io\FORM\page2.html" class="visited3"  target="_top" ><h2 >page2</h2></a>
+        <a href="elia1993.github.io\FoRM\page3.html" class="visited3"  target="_top"   ><h2>page3</h2></a>
+        <a href="elia1993.github.io\FORM\order.html" class="visited3"  target="_top"   ><h2>order</h2></a>
         </div>
 
 
