--- a/FORM/page2.html
+++ b/FORM/page2.html
@@ -50,6 +50,6 @@
             </table>
             <br>
             <hr>
-            <a href="index.html" target=_top  class="visited2"><h2>Main page</h2></a>
+            <a href="..\index.html" target=_top  class="visited2"><h2>Main page</h2></a>
             </body>
 </html>
