--- a/FORM/page3.html
+++ b/FORM/page3.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="CSS\style.css">
+    <link rel="stylesheet" href="/CSS/style.css">
     <title>Friends</title>
     <style>
     th {
@@ -41,6 +41,6 @@
             </table>
             <br>
             <hr>
-            <a href="index.html" class="visited3" target=_top ><h2>Main page</h2></a>
+            <a href="/" class="visited3" target=_top ><h2>Main page</h2></a>
             </body>
 </html>
