--- a/FORM/page2.html
+++ b/FORM/page2.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/CSS/style.css">
+    <link rel="stylesheet" href="/elia1993.github.io/CSS/style.css">
     <title>Friends</title>
     <style>
     
@@ -50,6 +50,6 @@
             </table>
             <br>
             <hr>
-            <a href="/" target=_top  class="visited2"><h2>Main page</h2></a>
+            <a href="/" target=_top  class=".visited2"><h2>Main page</h2></a>
             </body>
 </html>
