--- a/FORM/page2.html
+++ b/FORM/page2.html
@@ -3,11 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<<<<<<< HEAD
-    <link rel="stylesheet" href="../CSS/style.css">
-=======
-    <link rel="stylesheet" href="/CSS/style.css">
->>>>>>> 1b965ced68f7a768771f571484ed606818eb4931
+    <link rel="stylesheet" href="/elia1993.github.io/CSS/style.css">
     <title>Friends</title>
     <style>
     
