--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
        <hr>
        <div class="center-div">
         <a href="elia1993.github.io\FORM\page2.html" class="visited3"  target="_top" ><h2 >page2</h2></a>
-        <a href="elia1993.github.io\FoRM\page3.html" class="visited3"  target="_top"   ><h2>page3</h2></a>
+        <a href="elia1993.github.io\FORM\page3.html" class="visited3"  target="_top"   ><h2>page3</h2></a>
         <a href="elia1993.github.io\FORM\order.html" class="visited3"  target="_top"   ><h2>order</h2></a>
         </div>
 
