--- a/FORM/page3.html
+++ b/FORM/page3.html
@@ -41,6 +41,6 @@
             </table>
             <br>
             <hr>
-            <a href="/" class="visited2" target=_top ><h2>Main page</h2></a>
+            <a href="\" class="visited2" target=_top ><h2>Main page</h2></a>
             </body>
 </html>
