--- a/FORM/page2.html
+++ b/FORM/page2.html
@@ -33,19 +33,19 @@
                 <td>Jennifer Aniston</td>
                 <td>Jennifer Aniston as Rachel Green,
                   A fashion enthusiast and Monica Geller's best friend from childhood</td>
-                <td><img width="100%" class="image1" src="IMG\Jennifer Aniston.jpg"> </td>
+                <td><img width="100%" src="IMG\Jennifer Aniston.jpg"> </td>
               </tr>
               <tr>
                 <td>Courteney Cox</td>
                 <td>Courteney Cox as Monica Geller,
                   The mother hen of the group and a chef</td>
-                <td><img width="100%" class="image1"src="IMG\Courteney Cox.jpg"> </td>
+                <td><img width="100%"src="IMG\Courteney Cox.jpg"> </td>
             </tr>
               <tr>
                 <td>Matthew Perry</td>
                 <td> Matthew Perry as Chandler Bing,
                   An executive in statistical analysis and data reconfiguration for a large, multinational corporation</td>
-                <td><img width="100%" class="image1" src="IMG\images.jpg"> </td> 
+                <td><img width="100%"  src="IMG\images.jpg"> </td> 
                 </tr>
             </table>
             <br>
