--- a/FORM/page3.html
+++ b/FORM/page3.html
@@ -40,6 +40,7 @@
                 </tr>
             </table>
             <br>
+            <img width="100%" src="IMG\200610-living-single-news.jpg">
             <hr>
             </body>
 </html>
