--- a/FORM/page3.html
+++ b/FORM/page3.html
@@ -41,5 +41,6 @@
             </table>
             <br>
             <hr>
+            <a href="/" target=_top  class="visited2"><h2>Main page</h2></a>
             </body>
 </html>
