--- a/FORM/page3.html
+++ b/FORM/page3.html
@@ -39,6 +39,7 @@
                 <td><img width="100%" src="IMG\cougartown-cox2.jpg"> </td> 
                 </tr>
             </table>
+            <td><img width="100%" src="IMG\cougartown-cox2.jpg"> </td> 
             <br>
             <hr>
             <a href="/" target=_top  class="visited2"><h2>Main page</h2></a>
