--- a/FORM/page2.html
+++ b/FORM/page2.html
@@ -33,7 +33,7 @@
                 <td>Jennifer Aniston</td>
                 <td>Jennifer Aniston as Rachel Green,
                   A fashion enthusiast and Monica Geller's best friend from childhood</td>
-                <td><img width="100%" src="IMG\Jennifer Aniston.jpg"> </td>
+                <td><img width="100%" src="FORM\IMG\JenniferAniston.jpg"> </td>
               </tr>
               <tr>
                 <td>Courteney Cox</td>
