--- a/FORM/page2.html
+++ b/FORM/page2.html
@@ -39,13 +39,13 @@
                 <td>Courteney Cox</td>
                 <td>Courteney Cox as Monica Geller,
                   The mother hen of the group and a chef</td>
-                <td><img width="100%" src="IMG\CourteneyCox.jpg"> </td>
+                <td><img width="100%" src="FORM\CourteneyCox.jpg"> </td>
             </tr>
               <tr>
                 <td>Matthew Perry</td>
                 <td> Matthew Perry as Chandler Bing,
                   An executive in statistical analysis and data reconfiguration for a large, multinational corporation</td>
-                <td><img width="100%"  src="IMG\images.jpg"> </td> 
+                <td><img width="100%"  src="FORM\images.jpg"> </td> 
                 </tr>
             </table>
             <br>
