--- a/FORM/page3.html
+++ b/FORM/page3.html
@@ -28,15 +28,15 @@
               </tr>
               <tr>
                 <td> <a href="https://www.imdb.com/title/tt0098904/" target=_blank>Seinfeld</a></td>
-                <td><img width="100%" src="IMG\seinfeld-reg.jpg"> </td>
+                <td><img width="100%" src="FORM\seinfeld-reg.jpg"> </td>
               </tr>
               <tr>
                 <td><a href="https://www.imdb.com/title/tt0106056/" target=_blank>Living Single</a></td>
-                <td><img width="100%" src="IMG\200610-living-single-news.jpg"> </td>
+                <td><img width="100%" src="FORM\200610-living-single-news.jpg"> </td>
             </tr>
             <tr>
                 <td><a href="https://www.imdb.com/title/tt1441109/" target=_blank>Cougar Town</a></td>
-                <td><img width="100%" src="IMG\cougartown-cox2.jpg"> </td> 
+                <td><img width="100%" src="FORM\cougartown-cox2.jpg"> </td> 
                 </tr>
             </table>
             <br>
