--- a/FORM/page2.html
+++ b/FORM/page2.html
@@ -33,19 +33,19 @@
                 <td>Jennifer Aniston</td>
                 <td>Jennifer Aniston as Rachel Green,
                   A fashion enthusiast and Monica Geller's best friend from childhood</td>
-                <td><img width="100%" src="FORM\JenniferAniston.jpg"> </td>
+                <td><img width="100%" src="FORM\IMG\JenniferAniston.jpg"> </td>
               </tr>
               <tr>
                 <td>Courteney Cox</td>
                 <td>Courteney Cox as Monica Geller,
                   The mother hen of the group and a chef</td>
-                <td><img width="100%" src="FORM\CourteneyCox.jpg"> </td>
+                <td><img width="100%" src="FORM\IMG\CourteneyCox.jpg"> </td>
             </tr>
               <tr>
                 <td>Matthew Perry</td>
                 <td> Matthew Perry as Chandler Bing,
                   An executive in statistical analysis and data reconfiguration for a large, multinational corporation</td>
-                <td><img width="100%"  src="FORM\images.jpg"> </td> 
+                <td><img width="100%"  src="FORM\IMG\images.jpg"> </td> 
                 </tr>
             </table>
             <br>
