--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Friends</title>
     </head>
     <body>
-        <a href="https://www.netflix.com/il/title/70153404" target=_blank><img  class="image1" src="FORM\friends-week.jpg"></a> 
+        <a href="https://www.netflix.com/il/title/70153404" target=_blank><img  class="image1" src="IMG\friends-week.jpg"></a> 
         <br>
         <hr width="80%">
         <a href="https://www.imdb.com/title/tt0108778/" target=_blank><h2  class="index_h2">Friends</h2></a>
